--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             </ul>
             <a href="#" class="btn">EN</a>
         </nav>
+
+        <div class="content">
+            <h1> Buy & <br>Sell <span> Crypto</span></h1>
+            <p>World's biggest Cryptocurrency exchange available on web <br>as well as mobile phone.</p>
+            <a href="#" class="btn">Explore more</a>
+        </div>
     </div>
 
     <script src="/index.js"></script>
