Coin List styles

--- a/index.html
+++ b/index.html
@@ -24,6 +24,33 @@
             <p>World's biggest Cryptocurrency exchange available on web <br>as well as mobile phone.</p>
             <a href="#" class="btn">Explore more</a>
         </div>
+
+        <div class="coin-list">
+            <div class="coin">
+                <img src="/assets/bitcoin.png" alt="bitcoin image">
+                <div>
+                    <h3>$00</h3>
+                    <p>Bitcoin</p>
+                </div>
+            </div>
+
+            <div class="coin">
+                <img src="/assets/ethereum.png" alt="bitcoin image">
+                <div>
+                    <h3>$00</h3>
+                    <p>Ethereum</p>
+                </div>
+            </div>
+
+            <div class="coin">
+                <img src="/assets/dogecoin.png" alt="bitcoin image">
+                <div>
+                    <h3>$00</h3>
+                    <p>Dodgecoin</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <script src="/index.js"></script>
